@@ -2,7 +2,7 @@
 CSS Name: Shadow Effect
 Description: NextGEN Default Style with a Shadow effect
 Author: Alex Rabe
-Version: 1.30
+Version: 1.32
    
 This is a template stylesheet that can be used with NextGEN Gallery. I tested the
 styles with a default theme Kubrick. Modify it when your theme struggle with it,
@@ -234,10 +234,12 @@ it's only a template design
 
 .ngg-left {
 	float: left;
+	padding-right:10px;
 }
 
 .ngg-right {
 	float: right;
+	padding-left:10px;
 }
 
 .ngg-center {
